@@ -60,22 +60,14 @@ BufferedFileBinaryInputPort::BufferedFileBinaryInputPort(int fd) : fd_(fd), file
 
 BufferedFileBinaryInputPort::BufferedFileBinaryInputPort(ucs4string file) : fileName_(file), isClosed_(false), isPseudoClosed_(false), position_(0)
 {
-#ifdef _WIN32
-    fd_ = ::open(file.ascii_c_str(), O_RDONLY | O_BINARY);
-#else
-    fd_ = ::open(file.ascii_c_str(), O_RDONLY);
-#endif
+    fd_ = openFd(file, O_RDONLY, 0);
     initializeBuffer();
 }
 
 BufferedFileBinaryInputPort::BufferedFileBinaryInputPort(const char* file) : isClosed_(false), isPseudoClosed_(false), position_(0)
 {
     fileName_ = Object::makeString(file).toString()->data();
-#ifdef _WIN32
-    fd_ = ::open(file, O_RDONLY | O_BINARY);
-#else
-    fd_ = ::open(file, O_RDONLY);
-#endif
+    fd_ = openFd(ucs4string::from_c_str(file, strlen(file)), O_RDONLY, 0);
     initializeBuffer();
 }
 
